--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.13.1",
     "mongoose": "^4.0.7",
     "morgan": "^1.6.1",
+    "multer": "^1.1.0",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "request": "^2.58.0",
@@ -24,7 +25,6 @@
     "swig": "^1.4.2",
     "underscore": "^1.8.3",
     "xml2js": "^0.4.9"
-  
   },
   "devDependencies": {
     "babelify": "^6.1.3",
@@ -41,6 +41,6 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.0"                                                              
+    "watchify": "^3.3.0"
   }
 }
