--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "body-parser": "^1.13.2",
     "colors": "^1.1.2",
     "compression": "^1.5.1",
+    "connect-mongo": "^1.2.0",
+    "cookie-parser": "^1.4.3",
     "express": "^4.13.1",
+    "express-session": "^1.13.0",
     "mongoose": "^4.0.7",
     "morgan": "^1.6.1",
     "multer": "^1.1.0",
