--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "socket.io": "^1.3.6",
     "swig": "^1.4.2",
     "underscore": "^1.8.3",
-    "xml2js": "^0.4.9"
+    "xml2js": "^0.4.9",
+    "express-zip": "^2.0.0" 
   },
   "devDependencies": {
     "babelify": "^6.1.3",
